# mydumper-windows

./: CMakeLists.txt  Windows_操作手册.md
cmake/modules/: FindGLIB2.cmake  FindPCRE2.cmake
package/windows/: BackupWizard.ps1  RestoreWizard.ps1  mydumper.cmd  myloader.cmd
restore_work/dump1/: metadata  tick_monitor-schema-create.sql  tick_monitor.alert_rules-schema.sql  tick_monitor.contract_catalog-schema.sql  tick_monitor.contract_catalog.00000.sql  tick_monitor.contracts-schema.sql  tick_monitor.contracts.00000.sql  tick_monitor.ticks-schema.sql  trading_db-schema-create.sql  trading_db.accounts-schema.sql  trading_db.accounts.00000.sql  trading_db.alembic_version-schema.sql  trading_db.alembic_version.00000.sql  trading_db.orders-schema.sql  trading_db.orders.00000.sql  trading_db.positions-schema.sql  trading_db.positions.00000.sql  trading_db.trades-schema.sql  trading_db.users-schema.sql  trading_db.users.00000.sql
restore_work/dump_20260325_125043/: mydumper.cnf
src/: common.c  common.h  connection.c  logging.c  pmm_thread.c
src/mydumper/: mydumper.c  mydumper_chunks.c  mydumper_common.c  mydumper_daemon_thread.c  mydumper_exec_command.c  mydumper_file_handler.c  mydumper_global.h  mydumper_start_dump.c  mydumper_start_dump.h  mydumper_working_thread.c
src/myloader/: myloader.c  myloader_common.c  myloader_process.c  myloader_restore.c  myloader_restore_job.c  myloader_table.c
